# pyrifta

./: Proc_IBF_HDX_data_Gordo-B_230406_AB_clamped_5_data_stitched_mask_rmv.datx  README.md  RIFTA_main.py  RIFTA_main_230418.py  RIFTA_main_230418_update.py  RIFTA_main_230618_update.py  RIFTA_main_231004_update.py  RIFTA_main_231017_update.py  RIFTA_main_temp_thesis.py  RIFTA_main_temp_thesis_alg_compare.py  RIFTA_thesis_wo_extension.py  pyproject.toml
example/: RIFTA_main.py
lib_rifta/: BRFGaussian2D.py  BRFSuperGaussian2D.py  DwellTime2D_Assemble_C_d.py  DwellTime2D_Bayesian.py  DwellTime2D_FFT_Full_Test.py  DwellTime2D_LSQR.py  DwellTime2D_TSVD.py  Generate_pvt_from_json.py  Processed_Data_Plot.py  Reference_Point.py  Scanfile_Savejson.py  Selected_Region.py  Surface_Extension.py  __init__.py  draw.py
lib_rifta/ibf_engine/: DwellTime2D_FFT_IterativeFFT.py  DwellTime2D_FFT_Test.py  __init__.py  conv_fft2.py  dwell_time_2d_assemble_c_d.py  dwell_time_2d_fft_inverse_filter.py  dwell_time_2d_fft_inverse_filter_test.py  dwell_time_2d_fft_iterative_fft_one_iter.py  dwell_time_2d_fft_optimize_gamma.py  problem_func.py  problem_func_dwell_grid.py  pymoo_patternsearch.py  remove_surface1.py  test.py
lib_rifta/surface_extension_2d/: Chebyshev_XYnm.py  Hermite_XYnm.py  Laguerre_XYnm.py  Legendre_XYnm.py  Surface_Extension_8NN.py  Surface_Extension_8NN_2.py  Surface_Extension_EdgeExtraction.py  Surface_Extension_Fall.py  Surface_Extension_GP.py  Surface_Extension_Gauss.py  Surface_Extension_GerchbergPapoulis.py  Surface_Extension_Iter.py  Surface_Extension_Iter_freq.py  (+7 more)
